--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://rocky7211.github.io/Portfolio-2.0",
+  "homepage": "https://jaredmcdowall.me",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
